# competitive-programming

./: .scalafmt.conf  Cargo.toml  README.md  build.sbt  shell.nix
.github/workflows/: scala-ci.yml  scala.yml
adventofcode/: Cargo.toml
adventofcode/src/main/scala/com/adventofcode/year2022/day01/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2022/day02/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2022/day03/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2022/day04/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2023/day01/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2023/day02/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2023/day03/: Part1.scala
adventofcode/src/main/scala/com/adventofcode/year2023/day04/: Part1.scala  Part2.scala
adventofcode/src/main/scala/com/adventofcode/year2023/day05/: Part1.scala  Part2.scala
adventofcode/year2024/: Cargo.toml
adventofcode/year2024/day01/: part01.rs  part02.rs
adventofcode/year2024/day02/: part01.rs  part02.rs
adventofcode/year2024/day03/: part01.rs  part02.rs
adventofcode/year2024/day04/: part01.rs  part02.rs
adventofcode/year2024/day05/: part01.rs  part02.rs
adventofcode/year2024/day06/: part01.rs  part02.rs
adventofcode/year2024/day07/: part01.rs  part02.rs
adventofcode/year2024/day08/: part01.rs  part02.rs
spoj/src/main/scala/com/spoj/: CLOPPAIR.scala
spoj/src/test/scala/com/spoj/: CLOPPAIRSuite.scala
src/main/scala/com/codeforces/round630div2/: A.scala  B.scala
src/main/scala/com/codeforces/round631div2/: A.scala  B.scala  C.scala
src/main/scala/com/codeforces/round632div2/: A.scala  C.scala
src/main/scala/com/codeforces/round633div2/: B.scala
src/main/scala/com/codeforces/round634div3/: A.scala  B.scala  C.scala
src/main/scala/com/codeforces/round637div2/: A.scala  B.scala
src/main/scala/com/codeforces/round638div2/: B.scala  C.scala
src/main/scala/com/codeforces/round639div2/: B.scala  C.scala
src/main/scala/com/codeforces/round640div4/: C.scala
src/main/scala/com/codeforces/round641div2/: A.scala  D.scala
src/main/scala/com/codeforces/round642div3/: A.scala  D.scala
src/main/scala/com/codeforces/round643div2/: A.scala  B.scala  C.scala
src/main/scala/com/codeforces/round644div3/: A.scala  B.scala
src/main/scala/com/codeforces/round645div2/: A.scala  C.scala
src/main/scala/com/codeforces/round647div2/: A.scala  B.scala  C.scala
src/main/scala/com/codeforces/round648div2/: A.scala  B.scala
src/main/scala/com/codeforces/round650div3/: A.scala  C.scala  D.scala
src/main/scala/com/codeforces/round656div3/: A.scala  D.scala
src/main/scala/com/codeforces/round664div2/: A.scala
src/main/scala/com/codeforces/round85edu/: B.scala  C.scala  D.scala
(+167 files in other folders)
