bin = [
  { name = "day01-part01", path = "day01/part01.rs" },
  { name = "day01-part02", path = "day01/part02.rs" },
  { name = "day02-part01", path = "day02/part01.rs" },
  { name = "day02-part02", path = "day02/part02.rs" },
  { name = "day03-part01", path = "day03/part01.rs" },
  { name = "day03-part02", path = "day03/part02.rs" },
]

[package]
name = "year2024"
version = "0.1.0"
edition = "2021"
publish = false

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"

[dependencies]
regex = "1.11.1"
